# workflow-builder

./: .build-trigger  .dependency-cruiser.cjs  .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.devspace  Dockerfile.devspace.python  GANs.md  MCP_CONNECTIONS_PLAN_AND_WORK_LOG.md  PLAN.md  README.md  add-dapr-azure-app.md  atlas.hcl  biome.jsonc  components.json  connections-snapshot.md  custom-proxy.js  devspace.yaml  drizzle.config.lite.ts  drizzle.config.ts  e2b-dev-e2b-99c5397f3f5f566d.txt  flake.nix  instrumentation.ts  mastra-ai-mastra-b7af9802209a3e79.txt  next.config.ts  observability-integration-plan-progress-2026-02-16.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  progress-report.md  server-prod.js  shopify-remote-dom-8a5edab282632443.txt  skaffold.yaml  snoopy-wobbling-pebble.md  svelte.config.js  tsconfig.depcruise.json  (+5 more)
services/adk-agent-py/: Dockerfile  Dockerfile.sandbox  pyproject.toml
services/adk-agent-py/openshell_proto_0_0_42/: datamodel_pb2.pyi  openshell_pb2.py  openshell_pb2.pyi  sandbox_pb2.pyi
services/adk-agent-py/openshell_proto_0_0_45/: README.md  datamodel_pb2.pyi  inference_pb2.py  inference_pb2.pyi  openshell_pb2.py  openshell_pb2_grpc.py
services/adk-agent-py/src/: constants.py  effective_agent_config.py  event_publisher.py  instruction_bundle.py  main.py  mcp_retry.py  openshell_runtime.py  run_status.py  runtime_config.py  session_config.py  session_outputs.py  swebench_bash_policy.py
services/adk-agent-py/tests/: test_adk_session_events.py  test_diagrid_adk_patch.py  test_effective_agent_config.py  test_run_status.py  test_runtime_config.py  test_session_workflow_timeout.py  test_swebench_bash_policy.py  test_telemetry_providers.py
services/agent-runtime-controller/: Dockerfile  pyproject.toml
services/agent-runtime-controller/src/: main.py
services/agent-runtime-controller/tests/: test_main.py
services/browser-use-agent/: .gitignore  Dockerfile  Dockerfile.sandbox  README.md  browser-use-agent-browserstation-smoke.workflow.json  browser-use-web-navigator.workflow.json  pyproject.toml
services/browser-use-agent/src/: __init__.py  agent.py  config.py  event_publisher.py  executor.py  kimi_llm.py  main.py  run_status.py
services/browser-use-agent/tests/: test_agent_helpers.py  test_executor.py  test_kimi_llm.py  test_run_status.py  test_runtime_start_authority.py
services/claude-agent-py/: Dockerfile.sandbox  pyproject.toml
services/claude-agent-py/src/: __init__.py  cancellation.py  claude_sdk_runner.py  event_publisher.py  main.py  mcp_config.py  run_status.py  session_config.py  session_workflow.py
services/claude-agent-py/tests/: test_cancellation.py  test_claude_sdk_runner.py  test_mcp_config.py  test_run_status.py
services/cli-agent-py/: Dockerfile.sandbox  pyproject.toml
services/cli-agent-py/docker/: herdr-LICENSE-note.txt  herdr-config.toml  managed-settings.json
services/cli-agent-py/src/: __init__.py  agy_capture.py  agy_stop_guard.py  browser_video_sync.py  cancellation.py  cli_batch.py  cli_lifecycle.py  codex_capture.py  composition.py  env_flags.py  event_publisher.py  herdr_client.py  hook_exec.py  hooks_api.py  main.py  mcp_config.py  output_sync.py  playwright_mcp_client.py  playwright_mcp_proxy.py  preview_workspace.py  run_status.py  runtime_start_authority.py  seed.py  session_supervisor.py  session_workflow.py  structured_output.py  structured_output_mcp.py  taskhub.py  terminal_ws.py  transcript_store.py  transcript_tailer.py  workspace_diff_sync.py
services/cli-agent-py/tests/: conftest.py  test_claude_code_adapter.py  test_cli_batch.py  test_codex_agy_adapters.py  test_fastapi_routes.py  test_herdr_client.py  test_hooks_mapping.py  test_output_sync.py  test_preview_workspace.py  test_readiness_gate.py  test_runtime_start_authority.py  test_session_workflow.py  test_structured_output.py  test_supervisor_submit.py  test_taskhub.py  test_transcript_store.py  test_transcript_tailer.py
services/code-parser/: Cargo.toml  Dockerfile
services/code-parser/k8s/: runtime.yaml
services/code-parser/src/: main.rs  metadata.rs  model.rs  python.rs  schema.rs  typescript.rs
services/dapr-agent-py/: .dockerignore  Dockerfile  Dockerfile.sandbox  Dockerfile.sandbox-testing  Dockerfile.testing  REBUILD_MARKER.txt  animation-3b1b-v2-managed.workflow.json  dapr-agent-py-greenfield-sveltekit.workflow.json  pyproject.toml
services/dapr-agent-py/openshell_proto_0_0_42/: README.md  datamodel_pb2.py  openshell_pb2_grpc.py  sandbox_pb2.py  sandbox_pb2_grpc.py
services/dapr-agent-py/openshell_proto_0_0_45/: datamodel_pb2.py  datamodel_pb2_grpc.py  inference_pb2_grpc.py  openshell_pb2.pyi
services/dapr-agent-py/src/: alibaba_adapter.py  anthropic_adapter.py  benchmark_context.py  code_checkpoint.py  deepseek_adapter.py  dependency_guard.py  effective_agent_config.py  event_publisher.py  foundry_adapter.py  gateway_adapter.py  gemini_adapter.py  instruction_bundle.py  kimi_adapter.py  kimi_config.py  kimi_formulas.py  llm_providers.py  main.py  mcp_config_state.py  mcp_multimodal.py  mcp_retry.py  mcp_tool_timeout.py  minimal_main.py  nvidia_adapter.py  openai_adapter.py  openshell_runtime.py  provider_conformance.py  runtime_config.py  session_config.py  (+11 more)
services/dapr-agent-runtime/: Dockerfile  app.py  langgraph_engine.py  pyproject.toml  tools.py  tracing.py
services/dapr-swe/: Dockerfile  README.md  create-greenfield-sveltekit.workflow.json  pyproject.toml  resolve-github-issue.workflow.json
services/evaluation-coordinator/: pyproject.toml
services/ms-agent-workflow/: Dockerfile  app.py  config.py  pyproject.toml  tools.py
services/pydantic-ai-agent-py/: .gitignore  Dockerfile.sandbox  README.md  pyproject.toml
services/sandbox-execution-api/: Dockerfile  pyproject.toml
services/swebench-coordinator/: Dockerfile  pyproject.toml
services/workflow-orchestrator/: Dockerfile  REBUILD_MARKER.txt  app.py  content_tracing.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  tracing.py  workflow_data_postgres_rollback.py
(+5591 files in other folders)
