[project]
name = "agent-runtime-controller"
version = "0.1.0"
description = "Kubernetes operator reconciling AgentRuntime CRs into dapr-agent-py-sandbox Deployments."
requires-python = ">=3.12"
dependencies = [
    "kopf>=1.37.2",
    "kubernetes>=29.0.0",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
