[project]
name = "claude-agent-py"
version = "0.1.0"
description = "Claude Agent SDK Dapr Workflow runtime for workflow-builder durable agents"
requires-python = ">=3.12"
dependencies = [
    # Keep Dapr Workflow as the workflow-builder contract while delegating the
    # coding loop to Claude Agent SDK / Claude Code presets.
    "claude-agent-sdk>=0.2.93,<0.3",
    "diagrid>=0.1",
    "dapr-ext-workflow>=1.14",
    "dapr>=1.14",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
