[package]
name = "code-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
rustpython-parser = "0.4"
serde = { version = "=1.0.214", features = ["derive"] }
serde_json = "=1.0.132"
swc_common = "0.40"
swc_ecma_ast = "0.121"
swc_ecma_parser = "0.152"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
