[project]
name = "dapr-agent-py"
version = "0.1.0"
description = "Minimal Python durable agent with hot-reload configuration"
requires-python = ">=3.12"
dependencies = [
    "dapr-agents==1.0.3",
    "dapr-ext-workflow>=1.14",
    "dapr>=1.14",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    # MLflow tracing destination — added 2026-05-11 cutover so workflow
    # spans land in MLflow with trace_request_metadata that powers
    # mlflow.search_traces() (the OTEL Collector's otlphttp/mlflow path
    # writes spans but not the metadata, so it's search-invisible).
    # mlflow-skinny excludes scikit-learn / pandas / etc. — we only need
    # the tracing module.
    "mlflow-skinny>=3.6",
    "markdownify>=0.12",
    "ddgs>=7.0",
    "anthropic>=0.51",
    # Keep the Python client in lockstep with the deployed OpenShell
    # gateway/supervisor images. Protobuf schemas are not wire-compatible
    # across the 0.0.26 -> 0.0.45 gap.
    "openshell==0.0.45",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
