[project]
name = "dapr-agent-runtime"
version = "0.1.0"
description = "Python Dapr Agents runtime for durable coding and workspace actions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "dapr==1.17.1",
    "dapr-ext-langgraph==1.17.1",
    "dapr-ext-workflow==1.17.1",
    "dapr-agents==0.13.0",
    "deepagents>=0.0.10",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
    "pydantic>=2.11.0",
    "playwright>=1.57.0",
    "psycopg[binary]>=3.2.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["app.py", "tools.py", "langgraph_engine.py"]
