[project]
name = "ms-agent-workflow"
version = "1.0.0"
description = "Python Dapr workflow service backed by dapr-agents decorators and Microsoft Agent Framework agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "dapr==1.17.1",
    "dapr-ext-workflow==1.17.1",
    "dapr-agents==0.13.0",
    "agent-framework-core==1.0.0rc4",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["app.py"]
