[project]
name = "pydantic-ai-agent-py"
version = "0.1.0"
description = "Durable coding agent: pydantic-ai 2.x + pydantic-ai-harness on Dapr workflows (every LLM message and tool call a durable activity), default model kimi-k3"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[openai,mcp]>=2.13.0",
    "pydantic-ai-harness>=0.1.0",
    "pydantic>=2.12",
    "dapr>=1.18,<1.19",
    "dapr-ext-workflow>=1.18,<1.19",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
