[project]
name = "sandbox-execution-api"
version = "0.1.0"
description = "Host-level sandbox execution API for workflow-builder"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "kubernetes>=31.0.0",
    "pydantic>=2.10.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
