[project]
name = "swebench-coordinator"
version = "0.1.0"
description = "Dapr Workflow coordinator for workflow-builder SWE-bench runs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "dapr==1.17.1",
    "dapr-ext-workflow==1.17.1",
    "requests>=2.31.0",
    # Pin <36: kubernetes-python-client 36.0.0 has a load_incluster_config()
    # regression that sends an unusable in-cluster auth header → 401 from the
    # apiserver, breaking evaluator-Job creation in _ensure_evaluator_job. 35.x
    # works against k8s 1.36 apiservers. Same fix as sandbox-execution-api (PR #20).
    "kubernetes>=31.0.0,<36",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
