[project]
name = "workflow-orchestrator"
version = "1.0.0"
description = "Dapr Workflow orchestrator for dynamic workflow execution with child workflow support"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "dapr==1.18.0",
    "dapr-ext-workflow==1.18.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "jq>=1.8.0",
    "cel-python>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    # MLflow tracing destination — added 2026-05-11 cutover so workflow
    # spans land in MLflow with trace_request_metadata that powers
    # mlflow.search_traces() (the OTEL Collector's otlphttp/mlflow path
    # writes spans but not the metadata, so it's search-invisible).
    # mlflow-skinny excludes scikit-learn / pandas / etc.
    "mlflow-skinny>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "workflows", "activities"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
